--- a/AlmacenSistemaTG/AlmacenSistemaTG/Views/Account/Login.cshtml
+++ b/AlmacenSistemaTG/AlmacenSistemaTG/Views/Account/Login.cshtml
@@ -1,7 +1,7 @@
 ﻿@using AlmacenSistemaTG.Models
 @model LoginViewModel
 @{
-    ViewBag.Title = "Log in";
+    ViewBag.Title = "Iniciar Sesion";
 }
 
 <h2>@ViewBag.Title.</h2>
@@ -42,7 +42,7 @@
                     </div>
                 </div>
                 <p>
-                    @Html.ActionLink("Register as a new user", "Register")
+                    @Html.ActionLink("Registrarse como nuevo usuario", "Register")
                 </p>
                 @* Enable this once you have account confirmation enabled for password reset functionality
                     <p>
