--- a/AlmacenSistemaTG/AlmacenSistemaTG/Views/Shared/_Layout.cshtml
+++ b/AlmacenSistemaTG/AlmacenSistemaTG/Views/Shared/_Layout.cshtml
@@ -17,13 +17,14 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Sistema Almacen", "Index", "About", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("Sistema Almacen", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Principal", "Index", "Home")</li>
                     <li>@Html.ActionLink("Acerca de", "About", "Home")</li>
                     <li>@Html.ActionLink("Contacto", "Contact", "Home")</li>
+                    <li>@Html.ActionLink("Almacenes","Index","Almacenes")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
@@ -33,7 +34,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
+            <p>&copy; @DateTime.Now.Year -  Sistema Almacen ASP.NET MVC </p>
         </footer>
     </div>
 
