--- a/AlmacenSistemaTG/AlmacenSistemaTG/Views/Modelos/Index.cshtml
+++ b/AlmacenSistemaTG/AlmacenSistemaTG/Views/Modelos/Index.cshtml
@@ -4,13 +4,15 @@
     ViewBag.Title = "Index";
 }
 
-<h2>Index</h2>
+<div style="background-color:#FAFAFA;box-shadow:10px 10px 5px 0px rgba(0,0,0,0.75)">
+    <h2 style="padding-left:30%;padding-right:30%">Modelos</h2>
+</div>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Crear Nuevo Modelo", "Create")
 </p>
 <table class="table">
-    <tr>
+    <tr style="background-color:#2E2E2E;color:#58ACFA">
         <th>
             @Html.DisplayNameFor(model => model.Descripcion)
         </th>
@@ -29,9 +31,9 @@
             @Html.DisplayFor(modelItem => item.Clave)
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.IdModelo }) |
-            @Html.ActionLink("Details", "Details", new { id=item.IdModelo }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.IdModelo })
+            @Html.ActionLink("Editar", "Edit", new { id=item.IdModelo }) |
+            @Html.ActionLink("Detalles", "Details", new { id=item.IdModelo }) |
+            @Html.ActionLink("Borrar alv", "Delete", new { id=item.IdModelo })
         </td>
     </tr>
 }
